@@ -28,7 +28,7 @@ importFrom("R.oo", "getSource")
 importFrom("R.oo", "trim")
 importFrom("R.utils", "evaluate")
 importFrom("R.utils", "getAbsolutePath")
-importFrom("R.utils", "parse")
+##importFrom("R.utils", "parse")
 importFrom("stats", "start")
 importFrom("utils", "toLatex")
 
@@ -292,6 +292,10 @@ export("insertRootPaths")
 export("isStarted")
 export("nbrOfParameters")
 export("openUrl")
+export("parseCode")
+export("parseDocument")
+export("parseDirective")
+export("parseExpression")
 export("processRsp")
 export("ps2pdf")
 export("restart")
@@ -309,10 +313,6 @@ export("terminate")
 export("unescapeRspTags")
 export("write")   ## Deprecated
 export("writeResponse")
-
-
-# TO DO: Find alternative name
-export("parse")
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -525,7 +525,7 @@ S3method("getPath", "RspPage")
 S3method("getType", "RspPageDirective")
 
 # RspParser
-S3method("parse", "RspParser")
+S3method("parseDocument", "RspParser")
 S3method("parseRaw", "RspParser")
 
 # RspPreprocessingException
@@ -568,7 +568,7 @@ S3method("exprToCode", "RspShSourceCodeFactory")
 
 # RspSourceCode
 S3method("evaluate", "RspSourceCode")
-S3method("parse", "RspRSourceCode")
+S3method("parseCode", "RspRSourceCode")
 S3method("print", "RspSourceCode")
 S3method("rstring", "RspSourceCode")
 S3method("tangle", "RspSourceCode")
@@ -586,7 +586,7 @@ S3method("evaluate", "RspString")
 S3method("getSource", "RspString")
 S3method("getType", "RspString")
 S3method("nbrOfLines", "RspString")
-S3method("parse", "RspString")
+S3method("parseDocument", "RspString")
 S3method("print", "RspString")
 S3method("rcat", "RspString")
 S3method("rclean", "RspString")
@@ -607,10 +607,10 @@ S3method("getInclude", "RspText")
 
 # RspUnparsedDirective
 S3method("asRspString", "RspUnparsedDirective")
-S3method("parse", "RspUnparsedDirective")
+S3method("parseDirective", "RspUnparsedDirective")
 
 # RspUnparsedExpression
-S3method("parse", "RspUnparsedExpression")
+S3method("parseExpression", "RspUnparsedExpression")
 
 # RspVariableDirective
 S3method("getInclude", "RspVariableDirective")
