@@ -51,7 +51,7 @@ RspRSourceCode(...)
 \tabular{rll}{
  \tab \code{\link[R.rsp:evaluate.RspRSourceCode]{evaluate}} \tab Parses and evaluates the R code.\cr
  \tab \code{findProcessor} \tab  -\cr
- \tab \code{\link[R.rsp:parse.RspRSourceCode]{parse}} \tab Parses the R code.\cr
+ \tab \code{\link[R.rsp:parseCode.RspRSourceCode]{parseCode}} \tab Parses the R code.\cr
  \tab \code{rcat} \tab  -\cr
  \tab \code{rfile} \tab  -\cr
  \tab \code{rsource} \tab  -\cr
